// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component should render correctly with children 1`] = `
<header>
  <nav
    className="sc-eCApnc cbBKFV"
  >
    <div
      className="sc-dlnjwi sc-jSFjdj gUAnTN dLKKCL"
    >
      <div>
        This
      </div>
      <div>
        is
      </div>
      <div>
        cool
      </div>
    </div>
  </nav>
</header>
`;

exports[`Header component should render correctly without children 1`] = `
<header>
  <nav
    className="sc-eCApnc cbBKFV"
  >
    <div
      className="sc-dlnjwi sc-jSFjdj gUAnTN dLKKCL"
    />
  </nav>
</header>
`;
